# scope-maxine-sr

./: README.md  pyproject.toml
src/scope_maxine_sr/: __init__.py  pipeline.py  plugin.py  schema.py
src/scope_maxine_sr/modules/: __init__.py  nvvfx.py
tests/: test_maxine_sr.py
